--- a/src/app/BackOffice/alltemplateback/alltemplateback.component.html
+++ b/src/app/BackOffice/alltemplateback/alltemplateback.component.html
@@ -22,7 +22,7 @@
             <app-admin-start-page-aziz></app-admin-start-page-aziz>
           
             <router-outlet></router-outlet>
-  
+     <app-navbarcomponentback></app-navbarcomponentback>
             <app-backoffice-layout></app-backoffice-layout>
         </div>
     </div>
