--- a/src/app/BackOffice/sidebarback/sidebarback.component.html
+++ b/src/app/BackOffice/sidebarback/sidebarback.component.html
@@ -64,6 +64,14 @@
               </a>
             </li>
             <li class="sidebar-item">
+              <a class="sidebar-link" [routerLink]="['/admin/mlogistic']" aria-expanded="false">
+                <span>
+                  <i class="ti ti-article"></i>
+                </span>
+                <span class="hide-menu">Add Logestic</span>
+              </a>
+            </li>
+            <li class="sidebar-item">
               <a class="sidebar-link" [routerLink]="['/admin/logistic']" aria-expanded="false">
                 <span>
                   <i class="ti ti-article"></i>
@@ -101,6 +109,7 @@
                 <span class="hide-menu">Add Event</span>
               </a>
             </li>
+        
             <li class="sidebar-item">
               <a class="sidebar-link" [routerLink]="['/admin/indexeventback']" aria-expanded="false">
                 <span>
@@ -118,13 +127,38 @@
               </a>
             </li>
             <li class="sidebar-item">
-              <a class="sidebar-link" [routerLink]="['/admin/indexDanceBack']" aria-expanded="false">
+              <a class="sidebar-link" [routerLink]="['/admin/venueadmin']" aria-expanded="false">
                 <span>
                   <i class="ti ti-article"></i>
                 </span>
                 <span class="hide-menu">Dance Categories</span>
               </a>
             </li>
+            <li class="sidebar-item">
+              <a class="sidebar-link" [routerLink]="['/admin/venueAdd']" aria-expanded="false">
+                <span>
+                  <i class="ti ti-article"></i>
+                </span>
+                <span class="hide-menu">Add venue</span>
+              </a>
+            </li>
+            <li class="sidebar-item">
+              <a class="sidebar-link" [routerLink]="['/admin/venueadmin']" aria-expanded="false">
+                <span>
+                  <i class="ti ti-article"></i>
+                </span>
+                <span class="hide-menu">Venue</span>
+              </a>
+            </li>
+            <li class="sidebar-item">
+              <a class="sidebar-link" [routerLink]="['/admin/aff-ticket']" aria-expanded="false">
+                <span>
+                  <i class="ti ti-article"></i>
+                </span>
+                <span class="hide-menu">Ticket</span>
+              </a>
+            </li>
+            
             <li class="sidebar-item">
               <a class="sidebar-link" [routerLink]="['/admin/searcheventback']" aria-expanded="false">
                 <span>
@@ -136,11 +170,13 @@
               </a>
             </li>
             <li class="sidebar-item">
-              <a class="sidebar-link" href="./ui-typography.html" aria-expanded="false">
+              <a class="sidebar-link" [routerLink]="['/admin/dashboarddg']" aria-expanded="false">
                 <span>
-                  <i class="ti ti-typography"></i>
+                  <i class="ti ti-article"></i>
                 </span>
-                <span class="hide-menu">Typography</span>
+                <span class="hide-menu">Dance Groups</span>
+
+
               </a>
             </li>
             <li class="nav-small-cap">
