--- a/src/app/component/ticket-add/ticket-add.component.html
+++ b/src/app/component/ticket-add/ticket-add.component.html
@@ -10,7 +10,10 @@
     <input type="number" formControlName="price" placeholder="Enter the price">
   </div>
   <br>
-
+  <div>
+    <label>Quantity:</label>
+    <input type="number" formControlName="quantity" placeholder="Enter the quantity">
+  </div>
   <div>
     <label for="eventId">Event:</label>
     <select formControlName="eventId">
