--- a/src/app/CROWN/create-dg/create-dg.component.html
+++ b/src/app/CROWN/create-dg/create-dg.component.html
@@ -1,17 +1,17 @@
 <div class="form-container">
   <h2 class="form-title">Create a new dancers group</h2>
-  <form [formGroup]="createGroupForm" (submit)="createGroup()">
+  <form (submit)="createGroup()">
     <div>
       <label for="groupName">Group Name:</label>
-      <input type="text" id="groupName" name="groupName" formControlName="groupName">
-      <div *ngIf="createGroupForm?.get('groupName')?.value === null && createGroupForm?.get('groupName')?.touched" class="text-danger">Group Name is required</div>
+      <input type="text" id="groupName" name="groupName" [(ngModel)]="groupName" required>
     </div>
     <div class="form-group">
       <label for="groupDescription">Group Description (max 150 characters):</label>
-      <textarea id="groupDescription" name="groupDescription" formControlName="groupDescription"></textarea>
-      <div *ngIf="createGroupForm?.get('groupDescription')?.value === null && createGroupForm?.get('groupDescription')?.touched" class="text-danger">Group Description is required</div>
-
-      <div *ngIf="createGroupForm?.get('groupDescription')?.errors?.['maxlength'] && createGroupForm?.get('groupDescription')?.touched" class="text-danger">Maximum length exceeded (150 characters)</div>
+      <textarea class="form-control" id="groupDescription" name="groupDescription" [(ngModel)]="groupDescription" required maxlength="150"></textarea>
+    </div>
+    <div>
+      <label for="creationDate">Creation Date:</label>
+      <input type="text" id="creationDate" name="creationDate" [(ngModel)]="creationDate" disabled>
     </div>
     <div class="form-group">
       <label for="members">Group Members:</label>
