--- a/src/app/component/affichage/affichage.component.html
+++ b/src/app/component/affichage/affichage.component.html
@@ -10,9 +10,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
 
-<app-headerfront></app-headerfront>      
-<app-navbarcomponentfront></app-navbarcomponentfront> 
-
 <br>
 <div class="container-fluid">
   <div class="row">
@@ -36,6 +33,7 @@
         <div class="col-md-12" *ngFor="let feedback of pagedFeedbacks">
             <div class="card mb-4">
                 <div class="card-body">
+
                     <span class="label label-info">State: {{ feedback.state }}</span> 
                     <span class="action-icons">
                         <!-- Update button -->
@@ -43,10 +41,9 @@
                         <!-- Delete button -->
                         <a class="like-button" (click)="deleteFeedback(feedback.id_resandfeed)"><i class="fa fa-trash"></i> </a>
                         <!-- Like button -->
-                        <a class="like-button" (click)="likePost(feedback.id_resandfeed)"><i class="fa fa-heart"></i>  ({{ likeCount }})</a>
                     </span>
-                    <h5 class="card-title">Final Score: <span class="badge badge-danger">{{ feedback.finale_score }}</span></h5>
-                    <h4 class="card-text">Semifinal Score: <span class="badge badge-warning">{{ feedback.semifinal_score }}</span></h4>
+                    <h5 class="card-title">Result: <span class="badge badge-danger">{{ feedback.finale_score }}</span></h5>
+                  
                     <p class="card-text">Technique Score: <span class="badge badge-primary">{{ feedback.technique_score }}</span></p>
                     <p class="card-text">Creativity Score: <span class="badge badge-secondary">{{ feedback.creative_score }}</span></p>
                     <p class="card-text">Presentation Score: <span class="badge badge-success">{{ feedback.presentation_score }}</span></p>
@@ -69,7 +66,7 @@
 </div>
 <br>
 
-<app-footerfront></app-footerfront>
+
 
 <script src="/assets/FrontOffice/assets/js/jquery.min.js"></script>
 <script src="/assets/FrontOffice/assets/js/bootstrap.min.js"></script>
