--- a/src/app/component/all-feedback/all-feedback.component.html
+++ b/src/app/component/all-feedback/all-feedback.component.html
@@ -1,25 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Feedbacks</title>
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <!-- Font Awesome CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="/assets/FrontOffice/assets/css/templatemo-festava-live.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
-
-</head>
-<body>
-
-<!-- Header and Navbar -->
-<app-headerfront></app-headerfront>      
-<app-navbarcomponentfront></app-navbarcomponentfront> 
-
 <br>
+<div class="col-2 text-right">
+  <button  class="circle-button" routerLink="/affichage">
+    <i class="fa fa-arrow-left arrow-icon " aria-hidden="true"></i>
+  </button>
+  </div>
+
 <div class="text-center">
   <h2>List of Feedbacks and Scores</h2>
 </div>
@@ -28,39 +13,33 @@
 <form [formGroup]="searchForm" (ngSubmit)="onSubmit()" class="container mt-4">
   <div class="form-row">
     <div class="form-group col-md-2">
-      <input type="number" formControlName="techniqueScore" id="techniqueScore" class="form-control form-control-sm" placeholder="Technique">
+      <input type="number" formControlName="techniqueScore" id="techniqueScore" class="form-control form-control-sm" placeholder="Technique" (input)="searchFeedbacks()">
     </div>
     <div class="form-group col-md-2">
-      <input type="number" formControlName="creativeScore" id="creativeScore" class="form-control form-control-sm" placeholder="Creative">
+      <input type="number" formControlName="creativeScore" id="creativeScore" class="form-control form-control-sm" placeholder="Creative" (input)="searchFeedbacks()">
     </div>
     <div class="form-group col-md-2">
-      <input type="number" formControlName="presentationScore" id="presentationScore" class="form-control form-control-sm" placeholder="Presentation">
+      <input type="number" formControlName="presentationScore" id="presentationScore" class="form-control form-control-sm" placeholder="Presentation"  (input)="searchFeedbacks()">
     </div>
     <div class="form-group col-md-2">
-      <input type="number" formControlName="finaleScore" id="finaleScore" class="form-control form-control-sm" placeholder="Finale">
+      <input type="number" formControlName="finaleScore" id="finaleScore" class="form-control form-control-sm" placeholder="Finale"  (input)="searchFeedbacks()">
     </div>
-    <div class="form-group col-md-2">
-      <input type="number" formControlName="semifinalScore" id="semifinalScore" class="form-control form-control-sm" placeholder="Semifinal">
-    </div>
+  
     
   </div>
   <div class="form-row">
     <div class="form-group col-md-4">
-      <input type="text" formControlName="feedback" id="feedback" class="form-control form-control-sm" placeholder="Feedback">
+      <input type="text" formControlName="feedback" id="feedback" class="form-control form-control-sm" placeholder="Feedback"  (input)="searchFeedbacks()">
     </div>
     <div class="form-group col-md-4">
-      <select formControlName="state" id="state" class="form-control form-control-sm">
+      <select formControlName="state" id="state" class="form-control form-control-sm" (input)="searchFeedbacks()">
         <option value="">Select State</option>
         <option value="PENDING">PENDING</option>
         <option value="REJECTED">REJECTED</option>
         <option value="APPROVED">APPROVED</option>
       </select>
     </div>
-    <div class="form-group col-md-4 d-flex align-items-center">
-      <button type="submit" class="btn btn-primary btn-sm">
-        <i class="fa fa-search" aria-hidden="true"></i> 
-      </button>
-    </div>
+  
   </div>
 </form>
 
@@ -72,8 +51,7 @@
         <th scope="col">Technique</th>
         <th scope="col">Creativity</th>
         <th scope="col">Presentation</th>
-        <th scope="col">Semi final Score</th>
-        <th scope="col">Final Score</th>
+        <th scope="col">Results</th>
         <th scope="col" width="230">Feedback</th>
         <th scope="col">State</th>
       </tr>
@@ -83,7 +61,6 @@
         <td>{{ data.technique_score }}</td>
         <td>{{ data.creative_score }}</td>
         <td>{{ data.presentation_score }}</td>
-        <td>{{ data.semifinal_score }}</td>
         <td>{{ data.finale_score }}</td>
         <td>{{ data.feedback }}</td>
 
@@ -94,7 +71,6 @@
         <td>{{ feedback.technique_score }}</td>
         <td>{{ feedback.creative_score }}</td>
         <td>{{ feedback.presentation_score }}</td>
-        <td>{{ feedback.semifinal_score }}</td>
         <td>{{ feedback.finale_score }}</td>
         <td>{{ feedback.feedback }}</td>
         <td><span class="badge badge-info">{{ feedback.state }}</span></td> </tr>
@@ -105,7 +81,6 @@
         <td>{{ feedback.technique_score }}</td>
         <td>{{ feedback.creative_score }}</td>
         <td>{{ feedback.presentation_score }}</td>
-        <td>{{ feedback.semifinal_score }}</td>
         <td>{{ feedback.finale_score }}</td>
         <td>{{ feedback.feedback }}</td>
         <td><span class="badge badge-info">{{ feedback.state }}</span></td>
@@ -139,16 +114,3 @@
     <i class="fa fa-star" aria-hidden="true"></i> Top 3 Feedbacks
   </button>
 </div>
-
-<!-- Footer -->
-<app-footerfront></app-footerfront>
-
-<!-- JavaScript -->
-<script src="/assets/FrontOffice/assets/js/jquery.min.js"></script>
-<script src="/assets/FrontOffice/assets/js/bootstrap.min.js"></script>
-<script src="/assets/FrontOffice/assets/js/jquery.sticky.js"></script>
-<script src="/assets/FrontOffice/assets/js/click-scroll.js"></script>
-<script src="/assets/FrontOffice/assets/js/custom.js"></script>
-
-</body>
-</html>
