--- a/src/app/component/equipment/add-equipment/add-equipment.component.html
+++ b/src/app/component/equipment/add-equipment/add-equipment.component.html
@@ -17,7 +17,7 @@
       </select>
 
       <div>
-        <label for="logisticSelect">Sélectionnez une logistique :</label>
+        <label for="logisticSelect">Select logistic : :</label>
         <select id="logisticSelect" formControlName="id_logistic">
           <option *ngFor="let logistic of logistics" [value]="logistic.id_logistic">{{logistic.id_logistic}}</option>
         </select>
