--- a/src/app/component/staff/add-staff/add-staff.component.html
+++ b/src/app/component/staff/add-staff/add-staff.component.html
@@ -32,7 +32,7 @@
   
 
 
-  <label for="logisticSelect">Sélectionnez une logistique :</label>
+  <label for="logisticSelect">Select logistic  :</label>
   <select id="logisticSelect" formControlName="id_logistic">
     <option *ngFor="let logistic of logistics" [value]="logistic.id_logistic">{{logistic.id_logistic}}</option>
   </select>
