--- a/src/app/component/staff/list-staff/list-staff.component.html
+++ b/src/app/component/staff/list-staff/list-staff.component.html
@@ -1,60 +1,51 @@
 <div class="container mt-5">
   <h2 class="text-center">Staff List</h2>
- 
-<div class="search-form">
-  <input [(ngModel)]="name" (ngModelChange)="searchStaff()" placeholder="Staff Name">
-
-<label for="job">Job :</label>
-<select id="job" [(ngModel)]="job" (ngModelChange)="searchStaff()">
-  <option value="">All</option>
-  <option *ngFor="let job of jobs" [value]="job">{{job}}</option>
-</select>
-
-
-</div>
-
-  <table class="table table-striped mx-auto w-75 centered-table">
-
-    <thead>
-      <tr>
-   
-<th class="sort-button" (click)="sortByName()">Name</th>
-
-<th class="sort-button" (click)="sortByDateOfBirth()">DateOfBirth</th>
-  
-        <th>Job</th>
-        <th>Number</th>
-        <th>Email</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let staff of staffList">
-        
-        <td>{{ staff.name }}</td>
-        <td>{{ staff.DateOfBirth }}</td>
-        <td>{{ staff.job }}</td>
-        <td>{{ staff.number }}</td>
-        <td>{{ staff.email }}</td>
-        <td>
-          <button (click)="removeStaff(staff)">Delete</button>
-          <button routerLink="/admin/updateStaff/{{staff.id_staff}}">Update</button>
-         
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <div class="text-center mt-3">
-    <button routerLink="/admin/addstaff">Add Staff</button>
+  <div class="search-form mb-3">
+    <input [(ngModel)]="name" (ngModelChange)="searchStaff()" placeholder="Search Staff Name...">
+    <label for="job" class="mr-2">Job :</label>
+    <select id="job" [(ngModel)]="job" (ngModelChange)="searchStaff()">
+      <option value="">All</option>
+      <option *ngFor="let job of jobs" [value]="job">{{ job }}</option>
+    </select>
   </div>
- 
-  <div class="text-center mt-3">
-    <button routerLink="/admin/chartstaf">Statistics</button>
-<br><br>
-<div>  <button (click)="downloadExcel()">Download Excel</button></div>
-
-
+  <div class="table-container">
+    <table class="table centered-table">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Date of Birth</th>
+          <th>Job</th>
+          <th>Number</th>
+          <th>Email</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let staff of staffList">
+          <td>{{ staff.name }}</td>
+          <td>{{ staff.DateOfBirth }}</td>
+          <td>{{ staff.job }}</td>
+          <td>{{ staff.number }}</td>
+          <td>{{ staff.email }}</td>
+          <td>
+            <button class="action-btn delete-btn" (click)="removeStaff(staff)">Delete</button>
+            <button class="action-btn update-btn" routerLink="/admin/updateStaff/{{ staff.id_staff }}">Update</button>
+          </td>
+        </tr>
+        <tr *ngIf="staffList.length === 0">
+          <td colspan="6" class="text-center">No staff found</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
-  
+  <div class="text-center mt-3">
+    <button class="action-btn add-btn" routerLink="/admin/addstaff">Add Staff</button>
+  </div>
+  <div class="text-center mt-3">
+    <button class="action-btn statistics-btn" routerLink="/admin/chartstaf">Statistics</button>
+    <br><br>
+    <button class="action-btn download-btn" (click)="downloadExcel()">Download Excel</button>
+  </div>
   <div class="text-center mt-3">
     <button class="action-btn back-btn" routerLink="/admin/logistic">Back</button>
   </div>
