--- a/src/app/component/transport/add-transport/add-transport.component.html
+++ b/src/app/component/transport/add-transport/add-transport.component.html
@@ -1,4 +1,3 @@
-
 <div class="container mt-5">
   <h2  class="text-center">Add Transport</h2>
   <form [formGroup]="transportForm" (ngSubmit)="addTransport()"class="mx-auto w-75 p-4 shadow rounded bg-light">
@@ -13,27 +12,10 @@
     
     
 
-    <div class="form-group">
-      <label for="startLocation_longitude">Start Location longitude :</label>
-      <input type="text" class="form-control" id="startLocation_longitude" formControlName="startLocation_longitude" required>
-    </div>
-    <div class="form-group">
-      <label for="startLocation_latitude">Start Location latitude :</label>
-      <input type="text" class="form-control" id="startLocation_latitude" formControlName="startLocation_latitude" required>
-    </div>
-
-    <div class="form-group">
-      <label for="endLocation_longitude">End Location longitude:</label>
-      <input type="text" class="form-control" id="endLocation_longitude" formControlName="endLocation_longitude" required>
-    </div>
-
-    <div class="form-group">
-      <label for="endLocation_latitude">End Location latitude:</label>
-      <input type="text" class="form-control" id="endLocation_latitude" formControlName="endLocation_latitude" required>
-    </div>
+    
 
     <div>
-      <label for="logisticSelect">Sélectionnez une logistique :</label>
+      <label for="logisticSelect">Select logistic :</label>
       <select id="logisticSelect" formControlName="id_logistic">
         <option *ngFor="let logistic of logistics" [value]="logistic.id_logistic">{{logistic.id_logistic}}</option>
       </select>
@@ -42,13 +24,11 @@
 
      
       <div class="row">
-      <div class="col-md-6 text-left">
+      <div class="col-md-6 text-left">    <button type="submit" class="btn btn-primary">Add</button>
         <button routerLink="/admin/listtransport" class="btn btn-secondary mt-2">Cancel</button>
       </div>
     </div>
  
-    <button type="submit" class="btn btn-primary">Submit</button>
+
   </form>
 </div>
-
-
